--- a/.github/workflows/CDOnly.yml
+++ b/.github/workflows/CDOnly.yml
@@ -36,4 +36,4 @@ jobs:
           # The chosen name of the artifact. E.g. MyPackageName.  Required for stages: All, Upload and Deploy.
           artifact-name: EmpowerHelloWorld
           # The version number for the artifact. Only required for a release run. (format A.B.C). E.g. 1.0.1. Required for stages Upload and All if no build number was provided instead.
-        
+          build-number: ${{ github.run_number }}
